Amarok ChangeLog
================
(C) 2002-2025 the Amarok authors.

VERSION 3.3.1 UNRELEASED
  FEATURES:

  CHANGES:
   * Convert the remaining main UI toolbuttons to use icons from theme

  BUGFIXES:
   * Fix example permission grant command in database settings (BR 386004)
   * Fix equalizer gains not updating when selecting some presets (BR 463908)
   * Fix continuing playback after timecoded tracks (cue files etc, BR 270003)

VERSION 3.3.0
  FEATURES:

  CHANGES:

  BUGFIXES:
   * Default to not allow compiling without embedded database (BR 502777)
   * Handle volume better and avoid resets on track changes (BR 506427)

VERSION 3.2.82
  FEATURES:
   * Audio engine has been reworked to use gstreamer instead of phonon

  CHANGES:
   * Apply default pre-gain when ReplayGain is active and use fallback value
     if no ReplayGain data is available for a track
   * Clear out some of the now-discontinued last.fm radio functionalities and
     partially replace by opening relevant last.fm pages

  BUGFIXES:
   * Partially re-enable cue file support
   * Prevent concurrent scan result processings from taking place to avoid
     potential database issues

VERSION 3.2.81
  FEATURES:

  CHANGES:
   * Qt5/KF5 support has been dropped
   * Remove TagLib extras support (RealMedia and Audible files)
   * Update database character set to allow full utf-8 values (BR 462268)

  BUGFIXES:
   * Fix year 2038 problem for various dates saved in database (BR 426807)
  
VERSION 3.2.2
  FEATURES:
   * Try to preserve collection browser order when adding tracks
     to playlist (BR 180404)

  CHANGES:
   * Allow building without X11 support
   * Various build fixes for non-UNIX systems

  BUGFIXES:
   * Fix DAAP collection connections, browsing and playing (BR 498654)
   * Fix first line of lyrics.ovh lyrics missing (BR 493882)

VERSION 3.2.1
  CHANGES:
   * Support gpodder and lastfm on Qt6 builds
   * Limit maximum current track font size more when context view is narrow

  BUGFIXES: